Updated homepage text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Vivek Sharma</h1>
+  <h1>writing for the commit</h1>
   <p>CSE Student | Web Developer</p>
   <a href="about.html">About Me</a>
   <h2>I have set the webhook</h2>
